--- a/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/index.html
+++ b/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/index.html
@@ -3,7 +3,7 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Tytuł Artykułu - Fangea i inne kontynenty</title>
+<title>Mistrzostwa Fangei w Piłce Nożnej 2024 - Fangea i inne kontynenty</title>
 <meta property="og:title" content="Tytuł Artykułu">
 <meta name="twitter:title" content="Tytuł Artykułu">
 <meta name="description" content="Mistrzostwa Fangei w Piłce Nożnej 2024 dwudziesty pierwszy turniej o mistrzostwo Fangei w piłce nożnej mężczyzn. Gospodarzem turnieju, po raz czwarty w historii, będzie Sudfangea – w przeszłości, mistrzostwa w 1961 oraz 2001 roku rozgrywały się na terenie Sudfangei oraz cztery mecze Pucharu  Fangei 2021 były rozgrywane w Rockford. Turniej odbędzie się na 5 stadionach w 4 różnych miastach.">
@@ -28,7 +28,7 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Tytuł Artykułu</div><span>05.07.2024</span></header>
+<header><div>Mistrzostwa Fangei w Piłce Nożnej 2024</div><span>05.07.2024</span></header>
 <table class="infobox"><caption>Mistrzostwa Fangei w Piłce Nożnej 2024</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/g7Z0wXw/damn.png" data-description="Oficjalne logo Pucharu Fangei 2024"> </td></tr><tr><th>Dyscyplina</th><td> Piłka nożna </td></tr><tr><th style="text-align: center;" colspan="2"> Szczegóły turnieju</th></tr><tr><td colspan="2"> <img src="https://i.ibb.co/xXfmdqc/mapakwalifikacji.png" data-description="Mapa zakwalifikowanych reprezentacji."> </td></tr><tr><td colspan="2"> 	<img src="https://i.ibb.co/WkGgRfK/blue.png" class="icon small"> Reprezentacje zakwalifikowane </td></tr><tr><td colspan="2"> 	<img src="https://i.ibb.co/6r45Rfh/yellow.png" class="icon small"> Reprezentacje niezakwalifikowane </td></tr><tr><th>Gospodarz</th><td> 	<img src="https://i.ibb.co/4WJrjTW/usf.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/sudfangea/">Sudfangea</a> </td></tr><tr><th>Otwarcie</th><td> 1 lipca 2024, <a href="https://grumqy.github.io/fangea/wiki/rockford/">Rockford</a></td></tr><tr><th>Zamknięcie</th><td> 17 lipca 2024 <a href="https://grumqy.github.io/fangea/wiki/port_wilhelm/">Port Wilhelm</a></td></tr><tr><th>Liczba drużyn</th><td> 16 </td></tr><tr><th>Liczba aren</th><td> 5 </td></tr></tbody></table>
 
 <figure class="right"><img src="https://i.ibb.co/XjWw8tH/pilka.png" alt="Oficjalna piłka mistrzostw, Oceaunz"><figcaption>Oficjalna piłka mistrzostw, Oceaunz</figcaption></figure>
