--- a/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/index.html
+++ b/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Mistrzostwa Fangei w Piłce Nożnej 2024 - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Tytuł Artykułu">
-<meta name="twitter:title" content="Tytuł Artykułu">
+<meta property="og:title" content="Mistrzostwa Fangei w Piłce Nożnej 2024">
+<meta name="twitter:title" content="Mistrzostwa Fangei w Piłce Nożnej 2024">
 <meta name="description" content="Mistrzostwa Fangei w Piłce Nożnej 2024 dwudziesty pierwszy turniej o mistrzostwo Fangei w piłce nożnej mężczyzn. Gospodarzem turnieju, po raz czwarty w historii, będzie Sudfangea – w przeszłości, mistrzostwa w 1961 oraz 2001 roku rozgrywały się na terenie Sudfangei oraz cztery mecze Pucharu  Fangei 2021 były rozgrywane w Rockford. Turniej odbędzie się na 5 stadionach w 4 różnych miastach.">
 <meta property="og:description" content="Mistrzostwa Fangei w Piłce Nożnej 2024 dwudziesty pierwszy turniej o mistrzostwo Fangei w piłce nożnej mężczyzn. Gospodarzem turnieju, po raz czwarty w historii, będzie Sudfangea – w przeszłości, mistrzostwa w 1961 oraz 2001 roku rozgrywały się na terenie Sudfangei oraz cztery mecze Pucharu  Fangei 2021 były rozgrywane w Rockford. Turniej odbędzie się na 5 stadionach w 4 różnych miastach.">
 <meta name="twitter:description" content="Mistrzostwa Fangei w Piłce Nożnej 2024 dwudziesty pierwszy turniej o mistrzostwo Fangei w piłce nożnej mężczyzn. Gospodarzem turnieju, po raz czwarty w historii, będzie Sudfangea – w przeszłości, mistrzostwa w 1961 oraz 2001 roku rozgrywały się na terenie Sudfangei oraz cztery mecze Pucharu  Fangei 2021 były rozgrywane w Rockford. Turniej odbędzie się na 5 stadionach w 4 różnych miastach.">
