--- a/wiki/artykuł_dla_początkujacych_wolontariuszy/index.html
+++ b/wiki/artykuł_dla_początkujacych_wolontariuszy/index.html
@@ -52,7 +52,8 @@
 <p>W artykułach zawsze stosujemy:</p>
 
 <ul><li>czas przeszły, dokonany do wydarzeń, które już się zakończyły oraz</li>
-<li>czas teraźniejszy, prosty do wydarzeń, które są w trakcie oraz gdy artykuł dotyczy obiektów lub konstrukcji trwających stale.</li></ul>Przykład: „Stopień generała brygady uzyskał w roku 1998. Od czerwca 2004 pełni obowiązki zastępcy dowódcy Okręgu...”.
+<li>czas teraźniejszy, prosty do wydarzeń, które są w trakcie oraz gdy artykuł dotyczy obiektów lub konstrukcji trwających stale.</li></ul>
+<p>Przykład: „Stopień generała brygady uzyskał w roku 1998. Od czerwca 2004 pełni obowiązki zastępcy dowódcy Okręgu...”.</p>
 
 <p>Nigdy nie stosujemy czasu teraźniejszego do wydarzeń, które się zakończyły. Nie należy używać sformułowań, które umieszczają tekst w kontekście teraźniejszości, gdyż – prawdziwe i istotne w chwili pisania – z biegiem czasu się dezaktualizują.</p>
 
@@ -361,6 +362,7 @@ W artykułach zawsze stosujemy:
 
 * czas przeszły, dokonany do wydarzeń, które już się zakończyły oraz
 * czas teraźniejszy, prosty do wydarzeń, które są w trakcie oraz gdy artykuł dotyczy obiektów lub konstrukcji trwających stale.
+
 Przykład: „Stopień generała brygady uzyskał w roku 1998. Od czerwca 2004 pełni obowiązki zastępcy dowódcy Okręgu...”.
 
 Nigdy nie stosujemy czasu teraźniejszego do wydarzeń, które się zakończyły. Nie należy używać sformułowań, które umieszczają tekst w kontekście teraźniejszości, gdyż – prawdziwe i istotne w chwili pisania – z biegiem czasu się dezaktualizują.
