--- a/wiki/artykuł_dla_początkujacych_wolontariuszy/index.html
+++ b/wiki/artykuł_dla_początkujacych_wolontariuszy/index.html
@@ -331,7 +331,9 @@
 
 <p><img src="http://via.placeholder.com/640x360" height="200"></p>
 
-<span style="font-size: 80%">Tekst o wielkości 80%</span> Zwykły tekst <span style="font-size: 120%">Tekst o wielkości 120%</span>
+<span style="font-size: 80%">Tekst o wielkości 80%</span>
+<span style="font-size: 100%">Zwykły tekst</span>
+<span style="font-size: 120%">Tekst o wielkości 120%</span>
 
 <h1>Eksportowanie artykułu</h1>
 <p>Jeżeli uważasz, że twój artykuł jest gotowy do dodania na stronę jeszcze raz upewnij się, że nie popełniłeś żadnego błędu. Gdy będziesz pewien, że wszystko jest gotowe kliknij opcję „Skopiuj artykuł do schowka” (zaraz obok opcji włączającej słownik) i wyślij go do @grumpy5 na naszym <a href="https://discord.gg/hUjMqnKsJU">serwerze Discord</a>.</p>
@@ -744,7 +746,9 @@ Oto najbardziej podstawowe funkcje oraz ich kod źrółowy który można znaleź
 
 <img src="http://via.placeholder.com/640x360" height="200">
 
-<span style="font-size: 80%">Tekst o wielkości 80%</span> Zwykły tekst <span style="font-size: 120%">Tekst o wielkości 120%</span>
+<span style="font-size: 80%">Tekst o wielkości 80%</span>
+<span style="font-size: 100%">Zwykły tekst</span>
+<span style="font-size: 120%">Tekst o wielkości 120%</span>
 
 = Eksportowanie artykułu =
 
