--- a/wiki/greenpay/index.html
+++ b/wiki/greenpay/index.html
@@ -63,7 +63,9 @@
 <figcaption>
 <p>Logo Greenpay używane od 2014 roku</p>
 <p></p></figcaption><p></p>
-<p></p></figure>13 lipca 1961 roku Bank of Lembourg (BofL) uruchomił program kart kredytowych Green Card w Vounarii. Poprzedziła to masowa wysyłka 50 000 niezamówionych kart kredytowych do skrzynek pocztowych mieszkańców miasta. Pomysłodawcą programu był Thalassios Xenopoulos. Thalassios przekonał zarząd BofL do realizacji projektu, co doprowadziło do pierwszej na świecie udanej masowej wysyłki działających kart kredytowych. Chociaż program napotkał problemy, w tym wysoką przestępczość i straty finansowe, BofL kontynuowało rozwój Green Card, a do 1975 roku program stał się rentowny.<p></p>
+<p></p></figure><p></p>
+
+<p>13 lipca 1961 roku Bank of Lembourg (BofL) uruchomił program kart kredytowych Green Card w Vounarii. Poprzedziła to masowa wysyłka 50 000 niezamówionych kart kredytowych do skrzynek pocztowych mieszkańców miasta. Pomysłodawcą programu był Thalassios Xenopoulos. Thalassios przekonał zarząd BofL do realizacji projektu, co doprowadziło do pierwszej na świecie udanej masowej wysyłki działających kart kredytowych. Chociaż program napotkał problemy, w tym wysoką przestępczość i straty finansowe, BofL kontynuowało rozwój Green Card, a do 1975 roku program stał się rentowny.</p>
 
 <p>W 1978 roku BofL rozpoczęło licencjonowanie Green Card innym bankom w Lemburgu, tworząc sieć banków wspierających system. W 1985 roku Bank of Lembourg przekazał kontrolę nad programem nowo utworzonej organizacji National Green Card Inc. (NGCI). Międzynarodowe licencje zostały nadane bankom w 15 krajach, a w 1988 roku powstała Międzynarodowa Korporacja Kart Bankowych (IBCC) do zarządzania programem globalnym.</p>
 
@@ -128,7 +130,9 @@ Logo Greenpay używane od 2000 do 2014 roku
 <figcaption>
 Logo Greenpay używane od 2014 roku
 </figcaption>
-</figure>13 lipca 1961 roku Bank of Lembourg (BofL) uruchomił program kart kredytowych Green Card w Vounarii. Poprzedziła to masowa wysyłka 50 000 niezamówionych kart kredytowych do skrzynek pocztowych mieszkańców miasta. Pomysłodawcą programu był Thalassios Xenopoulos. Thalassios przekonał zarząd BofL do realizacji projektu, co doprowadziło do pierwszej na świecie udanej masowej wysyłki działających kart kredytowych. Chociaż program napotkał problemy, w tym wysoką przestępczość i straty finansowe, BofL kontynuowało rozwój Green Card, a do 1975 roku program stał się rentowny.
+</figure>
+
+13 lipca 1961 roku Bank of Lembourg (BofL) uruchomił program kart kredytowych Green Card w Vounarii. Poprzedziła to masowa wysyłka 50 000 niezamówionych kart kredytowych do skrzynek pocztowych mieszkańców miasta. Pomysłodawcą programu był Thalassios Xenopoulos. Thalassios przekonał zarząd BofL do realizacji projektu, co doprowadziło do pierwszej na świecie udanej masowej wysyłki działających kart kredytowych. Chociaż program napotkał problemy, w tym wysoką przestępczość i straty finansowe, BofL kontynuowało rozwój Green Card, a do 1975 roku program stał się rentowny.
 
 W 1978 roku BofL rozpoczęło licencjonowanie Green Card innym bankom w Lemburgu, tworząc sieć banków wspierających system. W 1985 roku Bank of Lembourg przekazał kontrolę nad programem nowo utworzonej organizacji National Green Card Inc. (NGCI). Międzynarodowe licencje zostały nadane bankom w 15 krajach, a w 1988 roku powstała Międzynarodowa Korporacja Kart Bankowych (IBCC) do zarządzania programem globalnym.
 
