--- a/wiki/greenpay/index.html
+++ b/wiki/greenpay/index.html
@@ -79,7 +79,7 @@
 <li>Greenpay Infinite – najbardziej prestiżowa karta kredytowa Greenpay, z limitem kredytowym do 1000000 dolarów fangejskich</li>
 <li>Greenpay Business – służbowa, firmowa</li>
 <li>Greenpay Quick – elektroniczna portmonetka, do drobnych płatności (opłata za metro, czy przejazd przez autostradę)</li>
-<li>Greenpay Youthful – dostosowywalna karta debetowa skierowana do osób młodszych. Posiada możliwość płatności zbliżeniowej (wydawana przez takie banki jak np. mBank).</li></ol>
+<li>Greenpay Youthful – dostosowywalna karta debetowa skierowana do osób młodszych. Posiada możliwość płatności zbliżeniowej (wydawana przez takie banki jak np. Camburis Bank).</li></ol>
 <h1>Usługi Greenpay</h1>
 <ol><li>Greenpay Cashback – umożliwia posiadaczom debetowych kart Visa wypłatę gotówki podczas płacenia kartą za towary lub usługi</li>
 <li>Greenpay Flashpay – umożliwia błyskawiczne (poniżej 1 sekundy) płatności zbliżeniowe za drobne kwoty. Technologia pozwala również na realizację transakcji powyżej limitu po podaniu kodu PIN przez posiadacza.</li></ol>
@@ -147,7 +147,7 @@ W 2024 roku, po przewrocie socjalistycznym Halandii, Greenpay zawiesiła wszystk
 # Greenpay Infinite – najbardziej prestiżowa karta kredytowa Greenpay, z limitem kredytowym do 1000000 dolarów fangejskich
 # Greenpay Business – służbowa, firmowa
 # Greenpay Quick – elektroniczna portmonetka, do drobnych płatności (opłata za metro, czy przejazd przez autostradę)
-# Greenpay Youthful – dostosowywalna karta debetowa skierowana do osób młodszych. Posiada możliwość płatności zbliżeniowej (wydawana przez takie banki jak np. mBank).
+# Greenpay Youthful – dostosowywalna karta debetowa skierowana do osób młodszych. Posiada możliwość płatności zbliżeniowej (wydawana przez takie banki jak np. Camburis Bank).
 
 = Usługi Greenpay =
 
