--- a/wiki/greenpay/index.html
+++ b/wiki/greenpay/index.html
@@ -81,7 +81,7 @@
 <li>Greenpay Quick – elektroniczna portmonetka, do drobnych płatności (opłata za metro, czy przejazd przez autostradę)</li>
 <li>Greenpay Youthful – dostosowywalna karta debetowa skierowana do osób młodszych. Posiada możliwość płatności zbliżeniowej (wydawana przez takie banki jak np. Camburis Bank).</li></ol>
 <h1>Usługi Greenpay</h1>
-<ol><li>Greenpay Cashback – umożliwia posiadaczom debetowych kart Visa wypłatę gotówki podczas płacenia kartą za towary lub usługi</li>
+<ol><li>Greenpay Cashback – umożliwia posiadaczom debetowych kart Greenpay wypłatę gotówki podczas płacenia kartą za towary lub usługi</li>
 <li>Greenpay Flashpay – umożliwia błyskawiczne (poniżej 1 sekundy) płatności zbliżeniowe za drobne kwoty. Technologia pozwala również na realizację transakcji powyżej limitu po podaniu kodu PIN przez posiadacza.</li></ol>
  <div id="source-code" style="display:none;">{|infobox Grenpay Inc.
 |c=2 [[timg:https://i.ibb.co/fxTTnsH/greenpay2.png|Logo]] |
@@ -151,7 +151,7 @@ W 2024 roku, po przewrocie socjalistycznym Halandii, Greenpay zawiesiła wszystk
 
 = Usługi Greenpay =
 
-# Greenpay Cashback – umożliwia posiadaczom debetowych kart Visa wypłatę gotówki podczas płacenia kartą za towary lub usługi
+# Greenpay Cashback – umożliwia posiadaczom debetowych kart Greenpay wypłatę gotówki podczas płacenia kartą za towary lub usługi
 # Greenpay Flashpay – umożliwia błyskawiczne (poniżej 1 sekundy) płatności zbliżeniowe za drobne kwoty. Technologia pozwala również na realizację transakcji powyżej limitu po podaniu kodu PIN przez posiadacza.</div>
 </article>
 </main>
