--- a/waluty/index.html
+++ b/waluty/index.html
@@ -27,7 +27,7 @@
                 <div class="select-label">
                     <div class="currency-item">
                         <div class="currency-logo-container">
-                            <div class="currency-logo" style="background-image: url('https://i.ibb.co/LCwD1nK/image-6.png');"></div>
+                            <div class="currency-logo" style="background-image: url('https://i.ibb.co/FDD8fxH/pamercjakwadrat.png');"></div>
                         </div>
                         <div class="currency-data">
                             <div class="currency-name">FNK</div>
@@ -37,7 +37,7 @@
                         <div class="currency-list">
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/LCwD1nK/image-6.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/FDD8fxH/pamercjakwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">FNK</div>
@@ -46,7 +46,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/XbWXD6k/image-5.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/yYDPKxW/usfkwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">UFD</div>
@@ -55,7 +55,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/wKcZqxM/obraz-2024-07-02-154053497.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/mv9vtyd/KNTkwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">REG</div>
@@ -91,7 +91,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/xDVFRD2/image-1.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/pL2byDB/atidaliakwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">ADK</div>
@@ -146,7 +146,7 @@
                 <div class="select-label">
                     <div class="currency-item">
                         <div class="currency-logo-container">
-                            <div class="currency-logo" style="background-image: url('https://i.ibb.co/XbWXD6k/image-5.png');"></div>
+                            <div class="currency-logo" style="background-image: url('https://i.ibb.co/yYDPKxW/usfkwadrat.png');"></div>
                         </div>
                         <div class="currency-data">
                             <div class="currency-name">UFD</div>
@@ -156,7 +156,7 @@
                         <div class="currency-list">
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/LCwD1nK/image-6.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/FDD8fxH/pamercjakwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">FNK</div>
@@ -165,7 +165,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/XbWXD6k/image-5.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/yYDPKxW/usfkwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">UFD</div>
@@ -174,7 +174,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/wKcZqxM/obraz-2024-07-02-154053497.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/mv9vtyd/KNTkwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">REG</div>
@@ -210,7 +210,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/xDVFRD2/image-1.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/pL2byDB/atidaliakwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">ADK</div>
