--- a/waluty/index.html
+++ b/waluty/index.html
@@ -5,7 +5,14 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Waluty - Fangea i inne kontynenty</title>
+    <title>Kalkulator Walut - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Kalkulator Walut">
+    <meta name="twitter:title" content="Kalkulator Walut">
+    <meta name="description" content="Proste narzędzie do obliczania kursów walutowych.">
+    <meta property="og:description" content="Proste narzędzie do obliczania kursów walutowych.">
+    <meta name="twitter:description" content="Proste narzędzie do obliczania kursów walutowych.">
+    <meta property="og:image" content="https://i.ibb.co/0QFtcSZ/pieniadze4.png">
+    <meta name="twitter:image" content="https://i.ibb.co/0QFtcSZ/pieniadze4.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
