--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Strona Główna - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Fangea">
+    <meta name="twitter:title" content="Fangea">
+    <meta name="description" content="Profesjonalny roleplay o prowadzeniu własnego państwa.">
+    <meta property="og:description" content="Profesjonalny roleplay o prowadzeniu własnego państwa.">
+    <meta name="twitter:description" content="Profesjonalny roleplay o prowadzeniu własnego państwa.">
+    <meta property="og:image" content="/fangea/local/fangeapage.png">
+    <meta name="twitter:image" content="/fangea/local/fangeapage.png">
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
