--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Strona Główna - Fangea i inne kontynenty</title>
-    <meta property="og:title" content="Fangea">
-    <meta name="twitter:title" content="Fangea">
+    <meta property="og:title" content="Fangea i inne kontynenty">
+    <meta name="twitter:title" content="Fangea i inne kontynenty">
     <meta name="description" content="Profesjonalny roleplay o prowadzeniu własnego państwa.">
     <meta property="og:description" content="Profesjonalny roleplay o prowadzeniu własnego państwa.">
     <meta name="twitter:description" content="Profesjonalny roleplay o prowadzeniu własnego państwa.">
