--- a/wiki/index.html
+++ b/wiki/index.html
@@ -72,6 +72,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/cartland/">Cartland</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/ergonbud/">Ergonbud</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/greenpay/">Greenpay</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/shot_paste/">Shot Paste</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Religie</h1>
