--- a/wiki/index.html
+++ b/wiki/index.html
@@ -84,6 +84,7 @@
             </ul>
             <ul class="article-category">
                 <h1>Konflikty Zbrojne</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">Powstanie Ekwalijskie</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/wojna_domowa_w_wizgardzie/">Wojna domowa w Wizgardzie</a></li>
             </ul>
             <ul class="article-category">
