--- a/wiki/powstanie_ekwalijskie/index.html
+++ b/wiki/powstanie_ekwalijskie/index.html
@@ -97,7 +97,7 @@
 <p>Po zakończeniu wojny wojska Sudfangei w końcu mogły udać się do domów i do rodzin w ojczyźnie. Wielu z żołnierzy, zarówno po obu stronach, nie przeżyli tej wojny. Powstało wiele cmentarzy i pomników upamiętniających obie strony walki, oraz ich poczynania i wartości.</p>
 
 <h2>Sytuacja polityczna w Ekwalii</h2>
-<p>W Ekwalii ogłoszono zaś w 1883 roku pierwsze wybory powszechne, w których uprawnieni do głosowania byli wszyscy niekarani obywatele. Wybory do Rady Langrafów wygrała Partia Odbudowy (dzisiaj Partia Konserwatywno-Demokratyczna, często nazywana "Con–Dem"), która reprezentowała wolnorynkowe poglądy na gospodarkę oraz konserwatywne poglądy na społeczeństwo. Rządy partii trwają do dziś praktycznie nieprzerwanie, a sama partia cieszyła się w wyborach poparciem na poziomie 83%. W Ekwalii wkrótce zniesiono niewolnictwo, zaczęto ciąć koszta i obniżać podatki, a rok później odnotowano wzrost ekonomiczny.</p>
+<p>W Ekwalii ogłoszono zaś w 1883 roku pierwsze wybory powszechne, w których uprawnieni do głosowania byli wszyscy niekarani obywatele. Wybory do Rady Langrafów wygrała Partia Odbudowy (dzisiaj Partia Konserwatywno-Demokratyczna, często nazywana „Con–Dem”), która reprezentowała wolnorynkowe poglądy na gospodarkę oraz konserwatywne poglądy na społeczeństwo. Rządy partii trwają do dziś praktycznie nieprzerwanie, a sama partia cieszyła się w wyborach poparciem na poziomie 83%. W Ekwalii wkrótce zniesiono niewolnictwo, zaczęto ciąć koszta i obniżać podatki, a rok później odnotowano wzrost ekonomiczny.</p>
 
 <h2>Upamiętnienie ofiar</h2>
 <p>Po obu stronach łącznie zginęło około 24 tysiące żołnierzy oraz około 31 tysięcy ludności cywilnej. Pomniki ofiar rozsiane są praktycznie w całej Ekwalii i w wielu innych państwach, takich jak Stany Zjednoczone Fangei, w których jest ich rekordowa ilość, bo aż 425 pomników. Wzniesiono również wiele muzeów, niekiedy na historycznych polach bitwy (na przykład w Point Clerk). W 1988 roku w Willington założono fundację Victims of '79-'82 Foundation, której celem jest upamiętnienie wszystkich ofiar wojny, którą określili jako „bratobójcza masakra”.</p>
@@ -204,7 +204,7 @@ Po zakończeniu wojny wojska Sudfangei w końcu mogły udać się do domów i do
 
 == Sytuacja polityczna w Ekwalii ==
 
-W Ekwalii ogłoszono zaś w 1883 roku pierwsze wybory powszechne, w których uprawnieni do głosowania byli wszyscy niekarani obywatele. Wybory do Rady Langrafów wygrała Partia Odbudowy (dzisiaj Partia Konserwatywno-Demokratyczna, często nazywana "Con–Dem"), która reprezentowała wolnorynkowe poglądy na gospodarkę oraz konserwatywne poglądy na społeczeństwo. Rządy partii trwają do dziś praktycznie nieprzerwanie, a sama partia cieszyła się w wyborach poparciem na poziomie 83%. W Ekwalii wkrótce zniesiono niewolnictwo, zaczęto ciąć koszta i obniżać podatki, a rok później odnotowano wzrost ekonomiczny.
+W Ekwalii ogłoszono zaś w 1883 roku pierwsze wybory powszechne, w których uprawnieni do głosowania byli wszyscy niekarani obywatele. Wybory do Rady Langrafów wygrała Partia Odbudowy (dzisiaj Partia Konserwatywno-Demokratyczna, często nazywana „Con–Dem”), która reprezentowała wolnorynkowe poglądy na gospodarkę oraz konserwatywne poglądy na społeczeństwo. Rządy partii trwają do dziś praktycznie nieprzerwanie, a sama partia cieszyła się w wyborach poparciem na poziomie 83%. W Ekwalii wkrótce zniesiono niewolnictwo, zaczęto ciąć koszta i obniżać podatki, a rok później odnotowano wzrost ekonomiczny.
 
 == Upamiętnienie ofiar ==
 
