--- a/wiki/index.html
+++ b/wiki/index.html
@@ -78,6 +78,9 @@
                 <h1>Wydarzenia Sportowe</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/">Mistrzostwa Fangei w Piłce Nożnej 2024</a></li>
             </ul>
+            <ul class="article-category">
+                <h1>Budynki</h1>
+            </ul>
         </div>
     </main>
     <script src="/fangea/pageheader.js"></script>
