--- a/wiki/ergonbud/index.html
+++ b/wiki/ergonbud/index.html
@@ -28,10 +28,9 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Ergonbud</div><span>26.06.2024</span></header>
-
-<table class="infobox"><caption>Ergonbud International</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/y5Jb3mR/ergonbud.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/yXS2s9J/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Λεωνίδα 8<br>10-000 Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka akcyjna </td></tr><tr><th>Prezes</th><td> Kostas Nikolaidis<br>(CEO) </td></tr><tr><th>Przewodniczący rady nadzorczej</th><td> Dimitrios Konstantinou </td></tr><tr><th>Zatrudnienie</th><td> 65 000 (2020) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000ERN1 </td></tr><tr><th>Symbol akcji</th><td> ERN </td></tr></tbody></table>
-<table class="infobox"><caption>Ergonbud Sp. z o.o.</caption><tbody><tr><th>Państwo</th><td> <img src="https://i.ibb.co/bJFhJjH/pampersia.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pampersia/">Pampersia</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/lubiniec_koźlacki/">Lubiniec Koźlacki</a> </td></tr><tr><th>Adres</th><td> ul. Nowa Huta 15<br>42-700 Lubiniec Koźlacki </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Kamil Wrona, Adam Wójcik-Kowalczyk </td></tr><tr><th>Zatrudnienie</th><td> 6000 (2023) </td></tr></tbody></table>
+<header><div>Ergonbud</div><span>01.09.2024</span></header>
+<table class="infobox"><caption>Ergonbud International</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/y5Jb3mR/ergonbud.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Λεωνίδα 8<br>10-000 Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka akcyjna </td></tr><tr><th>Prezes</th><td> Kostas Nikolaidis<br>(CEO) </td></tr><tr><th>Przewodniczący rady nadzorczej</th><td> Dimitrios Konstantinou </td></tr><tr><th>Zatrudnienie</th><td> 65 000 (2020) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000ERN1 </td></tr><tr><th>Symbol akcji</th><td> ERN </td></tr></tbody></table>
+<table class="infobox"><caption>Ergonbud Sp. z o.o.</caption><tbody><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/lubiniec_koźlacki/">Lubiniec Koźlacki</a> </td></tr><tr><th>Adres</th><td> ul. Nowa Huta 15<br>42-700 Lubiniec Koźlacki </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Kamil Wrona, Adam Wójcik-Kowalczyk </td></tr><tr><th>Zatrudnienie</th><td> 6000 (2023) </td></tr></tbody></table>
 
 <p>Ergonbud International – lemburska spółka budowlana z siedzibą w Vounarii (wcześniej w Eleii w Lemburgu), notowana na <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a>.</p>
 
@@ -40,7 +39,7 @@
 <p>Ergonbud zostało założone w 1891 roku przez Stavrosa Ergoniou w Lemburgu. Początkowo firma rozpoczęła działalność jako lokalne przedsiębiorstwo budowlane, specjalizując się głównie w budowie domów mieszkalnych i mniejszych obiektów komercyjnych.</p>
 
 <h2>Czasy współczesne</h2>
-<p>Obecnym prezesem spółki (od 1 stycznia 2023) jest Kostas Nikolaidis, wcześniej przez 10 lat był nim Kyriakos Vasilopoulos. Jego obroty w 2020 r. wyniosły 10 miliardów dolarów fangejskich. Spółka Zatrudnia obecnie około 65 000 pracowników.</p>
+<p>Obecnym prezesem spółki (od 1 stycznia 2023) jest Kostas Nikolaidis, wcześniej przez 10 lat był nim Kyriakos Vasilopoulos. Spółka Zatrudnia obecnie około 65 000 pracowników.</p>
 
 <h2>Przejęcie Aristides Eikonos AE</h2>
 <p>29 września 2008 roku Ergonbud dokonało przejęcia większościowego pakietu udziałów w  firmie budowlanej Aristides Eikonos AE. To przejęcie było kluczowym krokiem w ekspansji Ergonbudu na nowe rynki i umocnieniu jego pozycji. Aristides Eikonos AE doskonale wpasowała się w strategię rozwoju Ergonbudu, poszerzając jego portfolio usług i zdolności produkcyjnych.</p>
@@ -65,32 +64,31 @@
 <li>PEO 1002 Rethi – Kallithea</li>
 <li>PEO 1012 Kleitoria – Vilia</li>
 <li>PEO 1021 Enoria – Agdines</li></ul>
-<h1>Ergonbud w Pampersii</h1>
-<p>Grupa Ergonbud działa w Pampersii od 1987 r. Przy zatrudnieniu ponad 6000 pracowników, roczne obroty Grupy wynoszą ponad 4 mld UFD. Drogą zakupów i przejęć stworzyła holding, w skład którego wchodzą spółki zajmujące się budownictwem drogowym, kubaturowym, kolejowym, wytwarzaniem mas bitumicznych, wydobyciem kruszyw i tłucznia (Mineral Pampersia), zarządzaniem nieruchomościami (Ergonbud RE), a także administracją obiektami (Ergonbud PFS), wynajmem maszyn i urządzeń (Ergonbud BMTI). Poza siedzibą w Lubińcu Koźlackim posiada oddziały regionalne w: Pampersiu, Pamperbergu, Albertopolu, Arturowie Pawełeckim i Szogiszowie.</p>
+<h1>Ergonbud w Pamercji</h1>
+<p>Grupa Ergonbud działa w Pamercji od 1987 r, zatrudnia tam ponad 6000 pracowników. Drogą zakupów i przejęć stworzyła holding, w skład którego wchodzą spółki zajmujące się budownictwem drogowym, kubaturowym, kolejowym, wytwarzaniem mas bitumicznych, wydobyciem kruszyw i tłucznia (Mineral Pamercja), zarządzaniem nieruchomościami (Ergonbud RE), a także administracją obiektami (Ergonbud PFS), wynajmem maszyn i urządzeń (Ergonbud BMTI). Poza siedzibą w Lubińcu Koźlackim posiada oddziały regionalne w: Lipławiecku, Dobrogrodzie, Albertopolu, Arturowie Pawełeckim i Węgorzewie.</p>
 
 <h2>Inwestycje kubaturowe</h2>
 <ul><li>Szpital Arturowo Pawełeckie</li>
-<li>Szpital Oddział Okulistyki Pamperś</li>
+<li>Szpital Oddział Okulistyki Lipławieck</li>
 <li>Plaza Shopping Center Albertopol</li>
-<li>Centrum handlowe Zielona Dolina w Pampersiu</li>
-<li>Centrum handlowe Zielona Dolina w Pampertowie</li>
+<li>Centrum handlowe Zielona Dolina w Lipławiecku</li>
+<li>Centrum handlowe Zielona Dolina w Lwich Górach</li>
 <li>Galeria Pawełecka</li>
-<li>Galeria Pamperska</li>
+<li>Galeria Lipławiecka</li>
 <li>Galeria Koźlacka</li>
-<li>Dworzec Północny w Pamperbergu</li>
-<li>Szpital Południowy w Pampersiu</li></ul>
+<li>Dworzec Północny w Dobrogrodzie</li>
+<li>Szpital Południowy w Lipławiecku</li></ul>
 <h2>Inwestycje drogowe</h2>
-<ul><li>Autostrada A1 – odcinki – Pamperś nad Ostrą – Wołczyn, Szogunis – Szogiszów Północ</li>
-<li>Autostrada A2 – odcinki – Pamperś nad Ostrą – Dębowice, Koźlaczki Północ – Koźlaczki Południe – Lubiniec Koźlacki</li>
-<li>DW 501 Szogunis - Szogiszów</li>
+<ul><li>Autostrada A2 – odcinki – Lipławieck – Wołczyn, Bielin – Węgorzewo Południe</li>
+<li>Autostrada A2 – odcinki – Lipławieck – Dębowice, Koźlaczki Północ – Koźlaczki Południe – Lubiniec Koźlacki</li>
+<li>DW 501 Bielin - Węgorzewo</li>
 <li>DW 503 Włodzimierzec – Stary Włodzimierzec</li>
 <li>Obwodnica Lubińca Koźlackiego</li>
 <li>Obwodnica Przyjezierza</li>
 <li>Obwodnica Dębowickiej Górki</li></ul>
- <div id="source-code" style="display:none;">
-{|infobox Ergonbud International
+ <div id="source-code" style="display:none;">{|infobox Ergonbud International
 |c=2 [[timg:https://i.ibb.co/y5Jb3mR/ergonbud.png|Logo]] |
-! Państwo !| [[icon:https://i.ibb.co/yXS2s9J/lemburg.png|small]] (https://grumqy.github.io/fangea/wiki/lemburg/)[Lemburg] |
+! Państwo !| [[icon:https://i.ibb.co/6ZKVq0q/lemburg.png|small]] (https://grumqy.github.io/fangea/wiki/lemburg/)[Lemburg] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/vounaria/)[Vounaria] |
 ! Adres !| οδ. Λεωνίδα 8<br>10-000 Vounaria |
 ! Forma prawna !| spółka akcyjna |
@@ -102,7 +100,7 @@
 ! Symbol akcji !| ERN |
 |}
 {|infobox Ergonbud Sp. z o.o.
-! Państwo !| [[icon:https://i.ibb.co/bJFhJjH/pampersia.png|small]] (https://grumqy.github.io/fangea/wiki/pampersia/)[Pampersia] |
+! Państwo !| [[icon:https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png|small]] (https://grumqy.github.io/fangea/wiki/pamercja/)[Pamercja] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/lubiniec_koźlacki/)[Lubiniec Koźlacki] |
 ! Adres !| ul. Nowa Huta 15<br>42-700 Lubiniec Koźlacki |
 ! Forma prawna !| Sp. z o.o. |
@@ -120,7 +118,7 @@ Ergonbud zostało założone w 1891 roku przez Stavrosa Ergoniou w Lemburgu. Poc
 
 == Czasy współczesne ==
 
-Obecnym prezesem spółki (od 1 stycznia 2023) jest Kostas Nikolaidis, wcześniej przez 10 lat był nim Kyriakos Vasilopoulos. Jego obroty w 2020 r. wyniosły 10 miliardów dolarów fangejskich. Spółka Zatrudnia obecnie około 65 000 pracowników.
+Obecnym prezesem spółki (od 1 stycznia 2023) jest Kostas Nikolaidis, wcześniej przez 10 lat był nim Kyriakos Vasilopoulos. Spółka Zatrudnia obecnie około 65 000 pracowników.
 
 == Przejęcie Aristides Eikonos AE ==
 
@@ -151,33 +149,32 @@ Obecnym prezesem spółki (od 1 stycznia 2023) jest Kostas Nikolaidis, wcześnie
 * PEO 1012 Kleitoria – Vilia
 * PEO 1021 Enoria – Agdines
 
-= Ergonbud w Pampersii =
+= Ergonbud w Pamercji =
 
-Grupa Ergonbud działa w Pampersii od 1987 r. Przy zatrudnieniu ponad 6000 pracowników, roczne obroty Grupy wynoszą ponad 4 mld UFD. Drogą zakupów i przejęć stworzyła holding, w skład którego wchodzą spółki zajmujące się budownictwem drogowym, kubaturowym, kolejowym, wytwarzaniem mas bitumicznych, wydobyciem kruszyw i tłucznia (Mineral Pampersia), zarządzaniem nieruchomościami (Ergonbud RE), a także administracją obiektami (Ergonbud PFS), wynajmem maszyn i urządzeń (Ergonbud BMTI). Poza siedzibą w Lubińcu Koźlackim posiada oddziały regionalne w: Pampersiu, Pamperbergu, Albertopolu, Arturowie Pawełeckim i Szogiszowie.
+Grupa Ergonbud działa w Pamercji od 1987 r, zatrudnia tam ponad 6000 pracowników. Drogą zakupów i przejęć stworzyła holding, w skład którego wchodzą spółki zajmujące się budownictwem drogowym, kubaturowym, kolejowym, wytwarzaniem mas bitumicznych, wydobyciem kruszyw i tłucznia (Mineral Pamercja), zarządzaniem nieruchomościami (Ergonbud RE), a także administracją obiektami (Ergonbud PFS), wynajmem maszyn i urządzeń (Ergonbud BMTI). Poza siedzibą w Lubińcu Koźlackim posiada oddziały regionalne w: Lipławiecku, Dobrogrodzie, Albertopolu, Arturowie Pawełeckim i Węgorzewie.
 
 == Inwestycje kubaturowe ==
 
 * Szpital Arturowo Pawełeckie
-* Szpital Oddział Okulistyki Pamperś
+* Szpital Oddział Okulistyki Lipławieck
 * Plaza Shopping Center Albertopol
-* Centrum handlowe Zielona Dolina w Pampersiu
-* Centrum handlowe Zielona Dolina w Pampertowie
+* Centrum handlowe Zielona Dolina w Lipławiecku
+* Centrum handlowe Zielona Dolina w Lwich Górach
 * Galeria Pawełecka
-* Galeria Pamperska
+* Galeria Lipławiecka
 * Galeria Koźlacka
-* Dworzec Północny w Pamperbergu
-* Szpital Południowy w Pampersiu
+* Dworzec Północny w Dobrogrodzie
+* Szpital Południowy w Lipławiecku
 
 == Inwestycje drogowe ==
 
-* Autostrada A1 – odcinki – Pamperś nad Ostrą – Wołczyn, Szogunis – Szogiszów Północ
-* Autostrada A2 – odcinki – Pamperś nad Ostrą – Dębowice, Koźlaczki Północ – Koźlaczki Południe – Lubiniec Koźlacki
-* DW 501 Szogunis - Szogiszów
+* Autostrada A2 – odcinki – Lipławieck – Wołczyn, Bielin – Węgorzewo Południe
+* Autostrada A2 – odcinki – Lipławieck – Dębowice, Koźlaczki Północ – Koźlaczki Południe – Lubiniec Koźlacki
+* DW 501 Bielin - Węgorzewo
 * DW 503 Włodzimierzec – Stary Włodzimierzec
 * Obwodnica Lubińca Koźlackiego
 * Obwodnica Przyjezierza
-* Obwodnica Dębowickiej Górki
-</div>
+* Obwodnica Dębowickiej Górki</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
