--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div style=" width: 100%; max-width: 1600px; z-index: -1; height: 100px; border-radius: 200px; background-color: rgba(255, 255, 255, 0.15); position: absolute; top: 250px;right: calc(50% - 800px); filter: blur(125px);"></div>
         </div>
         <div style="width: 100%; max-width: 500px; z-index: -1; height: 400px;  background-position: center; background-size: contain;  background-repeat: no-repeat; background-image: url('https://grumqy.github.io/fangea/local/logo.svg'); position: absolute; top: 0 ;right: 50%; transform: translate(50%); opacity: 0.1;"></div>
-        <h2 style="font-size: 1rem; font-weight: 600; color: #bbb; text-align: center; max-width: 420px; padding: 0 10px; margin: 0 auto;">Realistyczny serwer roleplay w KoGaMa, gdzie zaawansowana gospodarka i utalentowana społeczność tworzą autentyczne i angażujące doświadczenie.</h2>
+        <h2 style="font-size: 1rem; font-weight: 600; color: #bbb; text-align: center; max-width: 420px; padding: 0 10px; margin: 0 auto;">Fangea to Roleplay osadzony w fikcyjnym uniwersum, w którym możesz zarządzać swoim państwem. Losy państwa zależą nie tylko od Twoich sąsiadów, ale również od Ciebie! Fangea utrzymuje realizm pod względem gospodarczym oraz politycznym dzięki np. zmieniającym się kursom walutowym czy cenom paliwa. Zarządzaj państwem, uprawiaj politykę i baw się dobrze!</h2>
     </div>
 <div style="max-width: 100vw; overflow: hidden;">
     <div class="article-tile-row" style=" display: flex; flex-direction: row; margin: auto; max-width: 2800px; justify-content: center; margin-top: 5rem;">
@@ -255,7 +255,7 @@
             <div class="info-tile full" style="min-height: 350px; height: fit-content;">
                 <h1>O nas</h1>
                 <p>
-                    Nasza społeczność serwera roleplay z państwami w grze KoGaMa to wyjątkowe miejsce, gdzie realizm spotyka się z kreatywnością. Nasze realistyczne podejście do roleplayu sprawia, że każda interakcja i decyzja ma znaczenie, co pozwala na głębokie zanurzenie się w świecie gry. Posiadamy zaawansowany system gospodarki, który umożliwia graczom tworzenie, zarządzanie i rozwijanie swoich państw w sposób, który odzwierciedla prawdziwe wyzwania ekonomiczne. Nasza społeczność składa się z wielu utalentowanych osób, które nieustannie podnoszą poprzeczkę jakości naszych sesji roleplayowych. Jeśli szukasz miejsca, gdzie możesz w pełni wykorzystać swoje umiejętności i wyobraźnię w realistycznym środowisku roleplayowym, nasz serwer jest dla Ciebie idealnym wyborem. Dołącz do nas i stań się częścią tej unikalnej przygody!
+                    Fangea to miejsce, w którym członkowie naszej społeczności mogą brać czynny udział w Roleplay'u związanym z prowadzeniem oraz zarządzaniem swojego państwa położonego w fikcyjnym uniwersum Fangei bądź obserwować całą zabawę z góry jako obserwator. Zapewniamy wysoki poziom Roleplay'u oraz profesjonalne podejście do zabawy poprzez uwzględnienie wielu innowacyjnych funkcji takich jak m.in. szczegółowa mapa świata, kalkulator kursów walutowych, a nawet własna wikipedia poświęcona uniwersum.
                 </p>
                 <div class="shadow" style="width: 120%; height: 500px; left: calc(50% - 700px); bottom: -400px;"></div>
             </div>
