--- a/wiki/index.html
+++ b/wiki/index.html
@@ -46,8 +46,14 @@
             <div class="categories-column"></div>
             <ul class="article-category">
                 <h1>Państwa</h1>
-                <li><a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/atidalia/">Atidalia</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/ebengrad/">Ebengrad</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/halandia/">Halandia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">Nowy Tuhalf</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/stany_zjednoczone/">Stany Zjednoczone</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a></li>
             </ul> 
             <ul class="article-category">
