--- a/wiki/shot_paste/index.html
+++ b/wiki/shot_paste/index.html
@@ -28,8 +28,8 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Shot Paste</div><span>26.08.2024</span></header>
-<table class="infobox"><caption>Shot Paste products</caption><tbody><tr><th style="text-align: center;" colspan="5"> (Craig Response  LLC.)</th></tr><tr><td colspan="2"> <img src="https://i.ibb.co/x23Pzg1/sp.png" data-description="Logo Shot Paste"> </td></tr><tr><td style="text-align: center;" colspan="2"> Logo </td></tr><tr><td colspan="2"><table class="ibox"><tbody></tbody></table></td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/bLd3Wcy/usf-flaga.webp" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/sudfangea/">Stany Zjednoczone Fangei</a> </td></tr><tr><th>Stan</th><td> <img src="https://i.ibb.co/k2KXPJR/Olympiaf.webp" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/olympia/">Olympia</a> </td></tr><tr><th>Data założenia</th><td> 2009 </td></tr><tr><th>Prezes</th><td> Franklin Craig </td></tr><tr><th>Siedziba</th><td> Palm Beach, Olympia </td></tr></tbody></table>
+<header><div>Shot Paste</div><span>08.09.2024</span></header>
+<table class="infobox"><caption>Shot Paste products</caption><tbody><tr><th style="text-align: center;" colspan="5"> (Craig Response  LLC.)</th></tr><tr><td colspan="2"> <img src="https://i.ibb.co/x23Pzg1/sp.png" data-description="Logo Shot Paste"> </td></tr><tr><td style="text-align: center;" colspan="2"> Logo </td></tr><tr><td colspan="2"><table class="ibox"><tbody></tbody></table></td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/bLd3Wcy/usf-flaga.webp" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/stany_zjednoczone/">Stany Zjednoczone Fangei</a> </td></tr><tr><th>Stan</th><td> <img src="https://i.ibb.co/k2KXPJR/Olympiaf.webp" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/olympia/">Olympia</a> </td></tr><tr><th>Data założenia</th><td> 2009 </td></tr><tr><th>Prezes</th><td> Franklin Craig </td></tr><tr><th>Siedziba</th><td> Palm Beach, Olympia </td></tr></tbody></table>
 
 
 <p><b>Shot Paste (właściwie Craig Response LLC.)</b> – sudfangejskie przedsiębiorstwo chemiczne z siedzibą w Palm Beach w stanie Olympia, założone w 2009 roku. W 2016 roku firma zatrudniała około 120 osób. Założycielem i obecnym prezesem firmy jest Franklin Craig. Firma stała się popularnym memem internetowym ze względu na swoje niecodzienne reklamy, w których występuje sam jej założyciel prezentując swoje produkty w nietypowych sytuacjach (np. zbudowanie łodzi z pasty Shot Paste).</p>
@@ -54,7 +54,7 @@
 |t=cc=2 Logo |
 |{ibox
 }|
-! Państwo!| [[icon:https://i.ibb.co/bLd3Wcy/usf-flaga.webp|small]] (https://grumqy.github.io/fangea/wiki/sudfangea/)[Stany Zjednoczone Fangei] |
+! Państwo!| [[icon:https://i.ibb.co/bLd3Wcy/usf-flaga.webp|small]] (https://grumqy.github.io/fangea/wiki/stany_zjednoczone/)[Stany Zjednoczone Fangei] |
 ! Stan!| [[icon:https://i.ibb.co/k2KXPJR/Olympiaf.webp|small]] (https://grumqy.github.io/fangea/wiki/olympia/)[Olympia] |
 ! Data założenia !| 2009 |
 ! Prezes !| Franklin Craig |
@@ -79,9 +79,7 @@ Firma swoje produkty opiera na swojej własnej recepturze płynnej gumy. Produkt
 
 = Pochodzenie nazwy =
 
-Nazwa serii produktów Shot Paste pochodzi głównie od możliwości kompaktowego nakładania produktu na powierzchnie. W 2009 roku zadebiutowało opakowanie umożliwiające precyzyjne nakładanie pasty, które w owych czasach było stosowane przez producentów relatywnie rzadko.
-
-</div>
+Nazwa serii produktów Shot Paste pochodzi głównie od możliwości kompaktowego nakładania produktu na powierzchnie. W 2009 roku zadebiutowało opakowanie umożliwiające precyzyjne nakładanie pasty, które w owych czasach było stosowane przez producentów relatywnie rzadko.</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
