--- a/wiki/powstanie_ekwalijskie/index.html
+++ b/wiki/powstanie_ekwalijskie/index.html
@@ -27,7 +27,7 @@
 <h1>Spis Treści</h1>
 <ul></ul>
 </nav>
-<article>
+<article class="awarded">
 <header><div>Powstanie Ekwalijskie</div><span>08.09.2024</span></header>
 <p><b>Powstanie Ekwalijskie (1879-1882)</b> – Zryw zbrojny mający miejsce w Ekwalii od 16 września 1879 roku do 20 kwietnia 1882 roku. Wojna ta zasłynęła wśród historyków jako jedna z „najbardziej interesujących i najbardziej krwawych” wojen w historii Maurazji. Była to także druga wojna, w której wojsko Stanów Zjednoczonych Fangei używało dynamitu do akcji dywersyjnych na szerszą skale.</p>
 <h1>Tło i przebieg powstania</h1>
