--- a/wiki/powstanie_ekwalijskie/index.html
+++ b/wiki/powstanie_ekwalijskie/index.html
@@ -27,7 +27,7 @@
 <h1>Spis Treści</h1>
 <ul></ul>
 </nav>
-<article class="awarded">
+<article>
 <header><div>Powstanie Ekwalijskie</div><span>08.09.2024</span></header>
 <p><b>Powstanie Ekwalijskie (1879-1882)</b> – Zryw zbrojny mający miejsce w Ekwalii od 16 września 1879 roku do 20 kwietnia 1882 roku. Wojna ta zasłynęła wśród historyków jako jedna z „najbardziej interesujących i najbardziej krwawych” wojen w historii Maurazji. Była to także druga wojna, w której wojsko Stanów Zjednoczonych Fangei używało dynamitu do akcji dywersyjnych na szerszą skale.</p>
 <h1>Tło i przebieg powstania</h1>
@@ -55,7 +55,6 @@
 
 <h2>Bitwa pod Eleją (1879)</h2>
 <p><img src="https://i.ibb.co/vh0tWkb/informacja.png" class="icon medium"> <i>Osobny Artykuł: <a href="https://grumqy.github.io/fangea/wiki/bitwa_pod_eleją/">Bitwa pod Eleją</a></i></p>
-
 
 <div class="image-group right">
 <figure class="left"><img src="https://i.ibb.co/87hDT2V/1.png" alt="Bitwa pod Eleją, stan na dzień po rozpoczęciu bitwy"><figcaption>Bitwa pod Eleją, stan na dzień po rozpoczęciu bitwy</figcaption></figure>
@@ -164,7 +163,6 @@ Wojska powstańcze używały umundurowania bliźniaczo podobnego do armii Księs
 
 [[icon:https://i.ibb.co/vh0tWkb/informacja.png|medium]] ''Osobny Artykuł: (https://grumqy.github.io/fangea/wiki/bitwa_pod_eleją/)[Bitwa pod Eleją]''
 
-
 <div class="image-group right">
 [[img:https://i.ibb.co/87hDT2V/1.png|left|Bitwa pod Eleją, stan na dzień po rozpoczęciu bitwy]]
 [[img:https://i.ibb.co/RHWtrxW/2.png|left|Bitwa pod Eleją, stan na 6 dni po rozpoczęciu bitwy]]
@@ -230,7 +228,5 @@ Po obu stronach łącznie zginęło około 24 tysiące żołnierzy oraz około 3
 <script src="/fangea/pageheader.js"></script>
 <script src="/fangea/article.js"></script>
 
-</body>
-</html>
 </body>
 </html>
