--- a/wiki/powstanie_ekwalijskie/index.html
+++ b/wiki/powstanie_ekwalijskie/index.html
@@ -27,7 +27,7 @@
 <h1>Spis Treści</h1>
 <ul></ul>
 </nav>
-<article class="awarded">
+<article>
 <header><div>Powstanie Ekwalijskie</div><span>08.09.2024</span></header>
 <p><b>Powstanie Ekwalijskie (1879-1882)</b> – Zryw zbrojny mający miejsce w Ekwalii od 16 września 1879 roku do 20 kwietnia 1882 roku. Wojna ta zasłynęła wśród historyków jako jedna z „najbardziej interesujących i najbardziej krwawych” wojen w historii Maurazji. Była to także druga wojna, w której wojsko Stanów Zjednoczonych Fangei używało dynamitu do akcji dywersyjnych na szerszą skale.</p>
 <h1>Tło i przebieg powstania</h1>
@@ -37,7 +37,7 @@
 
 
 <h2>Geneza</h2>
-<p>W 1866 roku załoga sudfangejskiego statku USFS Harlington dopłynęła do wschodniego wybrzeża Maurazji, niedaleko obecnego Nowego Gotheburga. Część załogi postanowiła osiedlić się na pustych terenach, gdzie wkrótce stworzono pierwszą kolonię nazwaną od miasta Gotheburg. Wkrótce Sudfangejczycy zajęli kolejną ziemię, którą nazwali Fort Wilson. Jak sama nazwa wskazuje, ulokowali oni tam fortece wojskową. Ekwalijczykom użycie ich niezagospodarowanych ziem przez inne państwo nie spodobało się, jednakże Ekwalia postanowiła nie wdawać się w otwarte konfrontacje z wojskiem Sudfangei. Zbyt delikatna reakcja rządu Księstwa Ekwalii nie spodobała się części działaczy politycznych i wojskowych, którzy nalegali na agresywną odpowiedź twierdząc, że zagrożenie z południa może wkrótce pozbawić ich niepodległości.</p>
+<p>W 1866 roku załoga sudfangejskiego statku USFS Harlington dopłynęła do wschodniego wybrzeża Maurazji, niedaleko obecnego Nowego Gotheburga. Część załogi postanowiła osiedlić się na pustych terenach, gdzie wkrótce stworzono pierwszą kolonię nazwaną od miasta Gotheburg. Wkrótce Sudfangejczycy zajęli kolejną ziemię, którą nazwali Fort Wilson. Jak sama nazwa wskazuje, ulokowali oni tam fortecę wojskową. Ekwalijczykom użycie ich niezagospodarowanych ziem przez inne państwo nie spodobało się, jednakże Ekwalia postanowiła nie wdawać się w otwarte konfrontacje z wojskiem Sudfangei. Zbyt delikatna reakcja rządu Księstwa Ekwalii nie spodobała się części działaczy politycznych i wojskowych, którzy nalegali na agresywną odpowiedź twierdząc, że zagrożenie z południa może wkrótce pozbawić ich niepodległości.</p>
 
 <h2>Wybuch powstania</h2>
 <p>W końcu, 16 września 1879 wybuchło powstanie zbuntowanej inteligencji wojskowej i politycznej. Utworzono Ruch Niepodległej Ekwalii, którego celem było siłą wyparcie Sudfangejczyków z Maurazji. Powstańcy w ciągu dwóch miesięcy zdobyli stolicę Ekwalii – Katvari. Z racji wejścia do miasta wojska Księstwa Ekwalii ulokowane w stolicy, skapitulowały, co zmusiło rząd do opowiedzenia się po stronie powstańców. Odpowiedź wojska Sudfangei była następująca – wysadzono tory i mosty kolejowe przebiegające na terenach okupowanych za pomocą dynamitu, co sprowokowało powstańców do natarcia na okupowane południe. Przed atakiem wojska powstańcze ostrzelały konsulat Stanów Zjednoczonych Fangei w Katvari co wzmożyło działania wojenne jeszcze bardziej.</p>
@@ -75,7 +75,7 @@
 <p>W maju 1880 z racji zdobycia Elei i Allenburga przez powstańców nie zaprzestali oni działań i ruszyli na Point Clerk z podwojoną siłą. Początkowo wydawać by się mogło, że jest to kolejna bitwa, którą powstańcy wygrają, tak odmieniła ona losy całej wojny. Po ekspedycji kilku mniejszych jednostek niepodal Point Clerk udało się powstańcom ocenić, ile może w środku znajdować się osób, i jaki opór ich spotka. Jednakże po zjawieniu się na miejsce do walki spotkała ich siła dwukrotnie większa niż ta, którą obstawiali. Mimo że wojska powstańców dalej miały przewagę liczebną to Point Clerk był solidnie obstawionym oraz dobrze zaopatrzonym obozem. Bitwie od strony Sudfangei dowodził generał Harley Wilson, a powstańczymi jednostkami generał Arvīds Krišjānis. Bitwa trwała w sumie 23 dni. Wojska powstańców połączone z wojskami Księstwa Ekwalii rozpoczęły otoczenie Point Clerk, choć mimo to, nie udało im się zdobyć tego obozu. W bitwie zginęło około 4300 żołnierzy Ruchu Niepodległej Ekwalii. Historycy dopatrują się w tej porażce luki zaopatrzenia w szeregach powstańców, oraz fakt, jak strzeżony był Point Clerk, które było największym obozem wojskowym Sudfangejczyków w okupowanej Ekwalii. Żołnierze przebywający w Point Clerk ustanowili wartę nocną, jako iż bitwe głównie toczono w środku dnia, a pierwsi powstańcy przedarli się w okolice w nocy będąc zauważonymi.</p>
 
 <h2>Mniejsze bitwy (1879-1882)</h2>
-<p>Oprócz bitwy pod Eleją i bitwy o Point Clerk wyróżnia się także wiele mniejszych bitew, które miały mniejszy wpływ na przebieg walk, naprzykład:</p>
+<p>Oprócz bitwy pod Eleją i bitwy o Point Clerk wyróżnia się także wiele mniejszych bitew, które miały mniejszy wpływ na przebieg walk, na przykład:</p>
 <ul><li>Bitwa o Allenburg (1879) – z rezultatem przegranej Stanów Zjednoczonych Fangei </li>
 <li>Szturm na ambasadę w Katvari (1879) – z rezultatem zniszczenia ambasady Sudfangei w Katvari</li>
 <li>Bitwa pod Raganą (1880) – z rezultatem odparcia ataku Ekwalijczyków</li>
@@ -141,7 +141,7 @@
 
 == Geneza ==
 
-W 1866 roku załoga sudfangejskiego statku USFS Harlington dopłynęła do wschodniego wybrzeża Maurazji, niedaleko obecnego Nowego Gotheburga. Część załogi postanowiła osiedlić się na pustych terenach, gdzie wkrótce stworzono pierwszą kolonię nazwaną od miasta Gotheburg. Wkrótce Sudfangejczycy zajęli kolejną ziemię, którą nazwali Fort Wilson. Jak sama nazwa wskazuje, ulokowali oni tam fortece wojskową. Ekwalijczykom użycie ich niezagospodarowanych ziem przez inne państwo nie spodobało się, jednakże Ekwalia postanowiła nie wdawać się w otwarte konfrontacje z wojskiem Sudfangei. Zbyt delikatna reakcja rządu Księstwa Ekwalii nie spodobała się części działaczy politycznych i wojskowych, którzy nalegali na agresywną odpowiedź twierdząc, że zagrożenie z południa może wkrótce pozbawić ich niepodległości.
+W 1866 roku załoga sudfangejskiego statku USFS Harlington dopłynęła do wschodniego wybrzeża Maurazji, niedaleko obecnego Nowego Gotheburga. Część załogi postanowiła osiedlić się na pustych terenach, gdzie wkrótce stworzono pierwszą kolonię nazwaną od miasta Gotheburg. Wkrótce Sudfangejczycy zajęli kolejną ziemię, którą nazwali Fort Wilson. Jak sama nazwa wskazuje, ulokowali oni tam fortecę wojskową. Ekwalijczykom użycie ich niezagospodarowanych ziem przez inne państwo nie spodobało się, jednakże Ekwalia postanowiła nie wdawać się w otwarte konfrontacje z wojskiem Sudfangei. Zbyt delikatna reakcja rządu Księstwa Ekwalii nie spodobała się części działaczy politycznych i wojskowych, którzy nalegali na agresywną odpowiedź twierdząc, że zagrożenie z południa może wkrótce pozbawić ich niepodległości.
 
 == Wybuch powstania ==
 
@@ -184,7 +184,7 @@ W maju 1880 z racji zdobycia Elei i Allenburga przez powstańców nie zaprzestal
 
 == Mniejsze bitwy (1879-1882) ==
 
-Oprócz bitwy pod Eleją i bitwy o Point Clerk wyróżnia się także wiele mniejszych bitew, które miały mniejszy wpływ na przebieg walk, naprzykład:
+Oprócz bitwy pod Eleją i bitwy o Point Clerk wyróżnia się także wiele mniejszych bitew, które miały mniejszy wpływ na przebieg walk, na przykład:
 * Bitwa o Allenburg (1879) – z rezultatem przegranej Stanów Zjednoczonych Fangei 
 * Szturm na ambasadę w Katvari (1879) – z rezultatem zniszczenia ambasady Sudfangei w Katvari
 * Bitwa pod Raganą (1880) – z rezultatem odparcia ataku Ekwalijczyków
