--- a/wiki/greenpay/index.html
+++ b/wiki/greenpay/index.html
@@ -28,7 +28,7 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Greenpay</div><span>06.08.2024</span></header>
+<header><div>Greenpay</div><span>08.09.2024</span></header>
 <table class="infobox"><caption>Grenpay Inc.</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/fxTTnsH/greenpay2.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Εμμανουήλ 52<br>10-000 Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka publiczna </td></tr><tr><th>Prezes</th><td> Theronikos Erymantheas<br>(CEO) </td></tr><tr><th>Dyrektor</th><td> Lysandros Pherecleides </td></tr><tr><th>Zatrudnienie</th><td> 10 400 (2019) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000GRP1 </td></tr><tr><th>Symbol akcji</th><td> GRP </td></tr></tbody></table>
 
 <p>Greenpay Inc. – Lemburska spółka i organizacja członkowska zajmująca się wydawaniem kart płatniczych, powstała w 1961 roku pod nazwą Green Card.</p>
@@ -47,23 +47,14 @@
 <figure class="left"><img src="https://i.ibb.co/vsww0qF/karta-kredytowa.png" alt="Wzór karty kredytowej Greenpay z 2020 roku"><figcaption>Wzór karty kredytowej Greenpay z 2020 roku</figcaption></figure>
 
 <figure class="right" style="width: 200px">
-<p><img src="https://i.ibb.co/SNFGzwv/greencard1.png"></p>
-<figcaption>
-<p>Logo Green Card używane od 1961 do 1984 roku</p>
-<p></p></figcaption><p></p>
-<p><img src="https://i.ibb.co/DzjMgL8/greencard2.png"></p>
-<figcaption>
-<p>Logo Green Card używane od 1984 do 2000 roku</p>
-<p></p></figcaption><p></p>
-<p><img src="https://i.ibb.co/R2QDsK2/greenpay1.png"></p>
-<figcaption>
-<p>Logo Greenpay używane od 2000 do 2014 roku</p>
-<p></p></figcaption><p></p>
-<p><img src="https://i.ibb.co/fxTTnsH/greenpay2.png"></p>
-<figcaption>
-<p>Logo Greenpay używane od 2014 roku</p>
-<p></p></figcaption><p></p>
-<p></p></figure><p></p>
+<img src="https://i.ibb.co/SNFGzwv/greencard1.png"><figcaption>
+<p>Logo Green Card używane od 1961 do 1984 roku</p></figcaption><p></p>
+<img src="https://i.ibb.co/DzjMgL8/greencard2.png"><figcaption>
+<p>Logo Green Card używane od 1984 do 2000 roku</p></figcaption><p></p>
+<img src="https://i.ibb.co/R2QDsK2/greenpay1.png"><figcaption>
+<p>Logo Greenpay używane od 2000 do 2014 roku</p></figcaption><p></p>
+<img src="https://i.ibb.co/fxTTnsH/greenpay2.png"><figcaption>
+<p>Logo Greenpay używane od 2014 roku</p></figcaption></figure><p></p>
 
 <p>13 lipca 1961 roku Bank of Lembourg (BofL) uruchomił program kart kredytowych Green Card w Vounarii. Poprzedziła to masowa wysyłka 50 000 niezamówionych kart kredytowych do skrzynek pocztowych mieszkańców miasta. Pomysłodawcą programu był Thalassios Xenopoulos. Thalassios przekonał zarząd BofL do realizacji projektu, co doprowadziło do pierwszej na świecie udanej masowej wysyłki działających kart kredytowych. Chociaż program napotkał problemy, w tym wysoką przestępczość i straty finansowe, BofL kontynuowało rozwój Green Card, a do 1975 roku program stał się rentowny.</p>
 
@@ -114,23 +105,14 @@ Pierwsza karta została wydana w roku 1961 przez Bank of Lembourg.
 [[img:https://i.ibb.co/vsww0qF/karta-kredytowa.png|left|Wzór karty kredytowej Greenpay z 2020 roku]]
 
 <figure class="right" style="width: 200px">
-<img src="https://i.ibb.co/SNFGzwv/greencard1.png" />
-<figcaption>
-Logo Green Card używane od 1961 do 1984 roku
-</figcaption>
-<img src="https://i.ibb.co/DzjMgL8/greencard2.png" />
-<figcaption>
-Logo Green Card używane od 1984 do 2000 roku
-</figcaption>
-<img src="https://i.ibb.co/R2QDsK2/greenpay1.png" />
-<figcaption>
-Logo Greenpay używane od 2000 do 2014 roku
-</figcaption>
-<img src="https://i.ibb.co/fxTTnsH/greenpay2.png" />
-<figcaption>
-Logo Greenpay używane od 2014 roku
-</figcaption>
-</figure>
+<img src="https://i.ibb.co/SNFGzwv/greencard1.png"><figcaption>
+Logo Green Card używane od 1961 do 1984 roku</figcaption>
+<img src="https://i.ibb.co/DzjMgL8/greencard2.png"><figcaption>
+Logo Green Card używane od 1984 do 2000 roku</figcaption>
+<img src="https://i.ibb.co/R2QDsK2/greenpay1.png"><figcaption>
+Logo Greenpay używane od 2000 do 2014 roku</figcaption>
+<img src="https://i.ibb.co/fxTTnsH/greenpay2.png"><figcaption>
+Logo Greenpay używane od 2014 roku</figcaption></figure>
 
 13 lipca 1961 roku Bank of Lembourg (BofL) uruchomił program kart kredytowych Green Card w Vounarii. Poprzedziła to masowa wysyłka 50 000 niezamówionych kart kredytowych do skrzynek pocztowych mieszkańców miasta. Pomysłodawcą programu był Thalassios Xenopoulos. Thalassios przekonał zarząd BofL do realizacji projektu, co doprowadziło do pierwszej na świecie udanej masowej wysyłki działających kart kredytowych. Chociaż program napotkał problemy, w tym wysoką przestępczość i straty finansowe, BofL kontynuowało rozwój Green Card, a do 1975 roku program stał się rentowny.
 
