--- a/functions.html
+++ b/functions.html
@@ -4,18 +4,8 @@
 
 
 <div class="image-group right">
-    <figure>
-        <img src="http://via.placeholder.com/640x360" />
-        <figcaption>
-            Przykładowy opis zdjęcia 1
-        </figcaption>
-    </figure>
-    <figure>
-        <img src="http://via.placeholder.com/500x500" />
-        <figcaption>
-            Przykładowy opis zdjęcia 2
-        </figcaption>
-    </figure>
+[[img:http://via.placeholder.com/640x360|right|Przykładowy opis zdjęcia 1]]
+[[img:http://via.placeholder.com/500x500|right|Przykładowy opis zdjęcia 2]]
 </div>
 
 
@@ -31,3 +21,19 @@
 
 
 <span style="font-size: 85%">Przykładowy tekst</span>
+
+
+<! -- Kilka obrazów wraz z opisami w jednym oknie -->
+
+
+<figure class="right" style="width: 200px">
+<img src="https://i.ibb.co/SNFGzwv/greencard1.png"><figcaption>
+Logo Green Card używane od 1961 do 1984 roku</figcaption>
+<img src="https://i.ibb.co/DzjMgL8/greencard2.png"><figcaption>
+Logo Green Card używane od 1984 do 2000 roku</figcaption>
+<img src="https://i.ibb.co/R2QDsK2/greenpay1.png"><figcaption>
+Logo Greenpay używane od 2000 do 2014 roku</figcaption>
+<img src="https://i.ibb.co/fxTTnsH/greenpay2.png"><figcaption>
+Logo Greenpay używane od 2014 roku</figcaption></figure>
+
+
